--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,7 +6,7 @@
 
   <div class="form">
     <form action="" [formGroup]="formularioLogin" (keyup.enter)="ingresar()">
-      <ion-input type="email" placeholder="email" formControlName="email"></ion-input>
+      <ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
       <ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
     </form>
   </div>
