--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -6,15 +6,21 @@
   </div>
 
   <div class="form">
-    <form [formGroup]="formularioRegistro" (keyup.enter)="guardar()">
-      <ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
-      <ion-input placeholder="Nombre" formControlName="nombre"></ion-input>
-      <ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
+    <form  (ngSubmit)="register()" [formGroup]="formularioRegistro" >
+      <ion-item class="ion-margin-bottom">
+        <ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
+        <ion-note slot="error" *ngIf="(email?.dirty || email?.touched) && email?.errors">Formato Email no válido</ion-note>
+      </ion-item>
+  
+      <ion-item class="ion-margin-bottom">
+        <ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
+        <ion-note slot="error" *ngIf="(password?.dirty || password?.touched) && password?.errors">El password debe contener al menos 6 caracteres</ion-note>
+      </ion-item>
     </form>
   </div>
 
   <div class="registro" >
-    <ion-button (click)="guardar()" style="--background: #ff987b; margin: 0 auto;">Registro</ion-button>
+    <ion-button (click)="register()" style="--background: #ff987b; margin: 0 auto;">Registro</ion-button>
   </div>
 
   <div class="footer registro-footer">
