--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,59 @@
-<ion-app >
-  <ion-split-pane contentId="main-content" (click)="getUserProfile()">
-    <ion-menu  contentId="main-content" type="overlay"  >
-      <ion-content  >
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note >{{email}}</ion-note>
+<ion-app>
+  <ion-menu menuId="main-menu" content-id="main">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content (click)="getUserProfile()">
+      <ion-list id="inbox-list">
+        <ion-list-header>Inbox</ion-list-header>
+        <ion-note>{{email}}</ion-note>
 
-          <ion-menu-toggle  auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
+        <ion-menu-toggle>
+          <ion-item routerLink="/home">
+            <ion-icon slot="start" name="home"></ion-icon>
+            <ion-label>Home</ion-label>
+          </ion-item>
+  
+          <ion-item routerLink="/about">
+            <ion-icon slot="start" name="information-circle"></ion-icon>
+            <ion-label>About</ion-label>
+          </ion-item>
+  
+          <ion-item routerLink="/codigo">
+            <ion-icon slot="start" name="qr-code"></ion-icon>
+            <ion-label>QR</ion-label>
+          </ion-item>
+  
+          <ion-item routerLink="/clima">
+            <ion-icon slot="start" name="sunny"></ion-icon>
+            <ion-label>Clima </ion-label>
+          </ion-item>
+  
+          <ion-item routerLink="/monedas">
+            <ion-icon slot="start" name="wallet"></ion-icon>
+            <ion-label>Monedas</ion-label>
+          </ion-item>
+  
+          <ion-item routerLink="/cuenta">
+            <ion-icon slot="start" name="person-circle"></ion-icon>
+            <ion-label>Cuenta</ion-label>
+          </ion-item>
 
-      
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+          <ion-item routerLink="/error">
+            <ion-icon slot="start" name="warning"></ion-icon>
+            <ion-label>Error</ion-label>
+          </ion-item>
+  
+          <ion-item routerLink="/login">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            <ion-label>Salir</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
+
