--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,3 +117,6 @@ ion-menu ion-content {
   ion-item.selected {
     --color: var(--ion-color-primary);
   }
+  ion-alert{
+    --width: 400px;
+  }
