--- a/src/global.scss
+++ b/src/global.scss
@@ -25,3 +25,7 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+
+ion-alert{
+    --width: 400px;
+  }
