--- a/src/app/pages/error/error.page.html
+++ b/src/app/pages/error/error.page.html
@@ -1,24 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>ERROR 404 INTENTE NUEAVAMENTE</ion-title>
+    <ion-title>Error</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-title color="danger">
-        <strong>Página No encontrada!!</strong>
-      </ion-card-title>
-    </ion-card-header>
+  <ion-img src="../../../assets/img/error.svg"></ion-img>
 
-    <ion-card-content>
-      Ups!!! al parecer el contenido que buscas no existe.
-    </ion-card-content>
-
-    <ion-item routerLink="/login" class="ion-activated">
-      <ion-icon name="arrow-undo-outline" ></ion-icon>
-      <ion-label>Volver</ion-label>
-    </ion-item>
-  </ion-card>
+  <ion-button expand="block" class="ion-margin-top" routerLink="/login">
+    <ion-icon name="home" slot="s"></ion-icon>Volver
+  </ion-button>
 </ion-content>
