--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -25,4 +25,7 @@
   <div class="footer">
     <h3 [routerLink]="['/registro']">¿No tienes cuenta? <span>Registrate Aqui</span></h3>
   </div>
+  <div class="footer">
+    <h3 [routerLink]="['/reset']"><span>¿Se te ha olvidado la contraseña?</span></h3>
+  </div>
 </ion-content>
