--- a/src/app/pages/codigo/codigo.page.html
+++ b/src/app/pages/codigo/codigo.page.html
@@ -7,6 +7,34 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <h1>hola</h1>
+<ion-content  [fullscreen]="true">
+
+  <ion-card>
+    <ion-card-content>
+        <ion-input [(ngModel)]="code" type="text" placeholder="Enter code here"></ion-input>
+
+        <ion-button (click)="process();" expand="block" class="primary">
+          Click me
+        </ion-button>
+        <img *ngIf="displayQrCode()" [src]="generated" class="codigo"/>
+    </ion-card-content>
+</ion-card>
+
+<label for="">{{currentDate | date:'dd-MM-yyyy'}}</label>
+<!--   
+  <ion-card class="ion-text-center">
+     <ion-card-content>
+      <ngx-qrcode [elementType]="elementType">
+
+      </ngx-qrcode>
+     </ion-card-content>
+  </ion-card>
+
+  <ion-button (click)="startScan()" expand="block" class="ion-margin">
+    Click me
+  </ion-button>
+
+  <ion-item>
+    <ion-label class="ion-text-wrap">Scanned Result:{{scannedResult}}</ion-label>
+  </ion-item> -->
 </ion-content>
