nuevas validaciones y privilegios

--- a/src/global.scss
+++ b/src/global.scss
@@ -29,3 +29,11 @@
 ion-alert{
     --width: 400px;
   }
+
+  .alert-radio-label.sc-ion-alert-md {
+    white-space: pre-line !important;
+ }
+ 
+ .alert-radio-label.sc-ion-alert-ios {
+     white-space: pre-line !important;
+ }
