scanear y generar qr
se implemento el scaner y generar qr

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -120,3 +120,7 @@ ion-menu ion-content {
   ion-alert{
     --width: 400px;
   }
+  body.scanner-active {
+    --background: transparent;
+    --ion-background-color: transparent;
+  }
