--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,9 +8,10 @@
 </ion-header>
 
 <ion-content>
-  <ion-fab vertical="bottom" horizontal="end">
-    <ion-fab-button color="success" (click)="addUsuario()">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  <ion-button routerLink="/datos" expand="block" fill="clear" shape="round">
+    aca me voy
+  </ion-button>
 </ion-content>
+
+
+
